# AI_Quiz

./: .gitignore  README.md  run.sh
backend/: pyproject.toml
backend/src/: db.py  gigachat_client.py  grader.py  main.py  questions.json  questions_quiz2.json  questions_quiz3.json  quiz.db
backend/src/ai_quiz_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: api.js  app.js  home.js  index.html  leaderboard.html  leaderboard.js  quiz1.html  quiz1.js  quiz2.html  quiz2.js  quiz3.html  quiz3.js  quiz_page.js  style.css
